# playpen

./: .gitignore  README.md  SETUP.md  model_registry.json  pyproject.toml
examples/gymnasium/: taboo.ipynb  wordle.ipynb
examples/openenv/: taboo.ipynb  wordle-trl.ipynb  wordle.ipynb
examples/pettingzoo/: taboo.ipynb  wordle.ipynb
examples/trl/: dpo_trainer.py  sft_trainer_lora.py  sft_trainer_simple.py
playpen/: __init__.py  base.py  buffers.py  cli.py
playpen/agents/: __init__.py  base.py  clem.py  openenv.py
playpen/callbacks/: buffers.py  files.py
playpen/starters/: batch_trainer.py  branching_trainer.py  sequential_trainer.py
tests/: test_evaluate.py
