[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playpen"
version = "3.7.0" # matches least required clemcore version
description = "The Playpen Python package to train LLMs interactively in text-based environments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Philipp Sadler", email = "first.last@uni-potsdam.de" }
]
dependencies = [
    "clemcore>=3.7.0,<4.0.0"
]

[project.optional-dependencies]
trl = [
    "peft>=0.17.0,<1.0.0", # supports LoRA for most MoE model including LLama4 family
    "trl>=0.28.0,<1.0.0"
]

[project.scripts]
playpen = "playpen.cli:main"

[project.urls]
Homepage = "https://github.com/lm-playpen/playpen"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "dist", "venv", "examples", "clembench"]
